docs(duties): Adds multiple new duties to EN

--- a/src/Resources/Localization/Duty/en/Endwalker/Trials/TheMothercrystal.json
+++ b/src/Resources/Localization/Duty/en/Endwalker/Trials/TheMothercrystal.json
@@ -5,5 +5,106 @@
     "Type": 1,
     "Expansion": 4,
     "Level": 89,
-    "UnlockQuestID": 69985
+    "UnlockQuestID": 69985,
+	"TerritoryID": 995,
+	"Bosses": [
+		{
+			"Name": "Hydaelyn (Phase 1)",
+			"Strategy": "Phase 1 introduces the base mechanics of the fight.",
+			"KeyMechanics": [
+				{
+					"Name": "Heroes's Radiance",
+					"Description": "Unavoidable raid wide damage.",
+					"Type": 4
+				},
+				{
+					"Name": "Dawn Mantle",
+					"Description": "Boss swaps weapons to indicate which mechanic is used:\n\nDancer chakrams (Red icon):\nLarge donut AoE. Safe zone inside her hitbox.\nWhite Mage staff (Green icon):\nLarge circle AoE around the boss.\nPaladin Sword & Shield (Blue icon): Cross shaped line AoEs at Hydaelyn's position.",
+					"Type": 2
+				},
+				{
+					"Name": "Mousa's Scorn",
+					"Description": "Shared tankbuster.",
+					"Type": 0
+				},
+				{
+					"Name": "Magos's Radiance",
+					"Description": "Heavy raid wide damage.",
+					"Type": 4
+				}
+			]
+		},
+		{
+			"Name": "Crystals of Light (Add Phase)",
+			"Strategy": "The goal of this phase is to destroy all of the crystals before Hydaelyn's Conviction bar reaches 100",
+			"KeyMechanics": [
+				{
+					"Name": "Hydaelyn's Ray",
+					"Description": "Proximity dive attack. Stand far away from the line.",
+					"Type": 4
+				},
+				{
+					"Name": "Crystalline Stone III",
+					"Description": "Heavy raid wide damage.",
+					"Type": 3
+				},
+				{
+					"Name": "Crystalline Blizzard III",
+					"Description": "Targeted circle AoEs under all players.",
+					"Type": 6
+				},
+				{
+					"Name": "Exodus",
+					"Description": "Massive raid wide damage.",
+					"Type": 4
+				}
+			]
+		},
+		{
+			"Name": "Hydaelyn (Phase 2)",
+			"Strategy": "The final phase will repeat mechanics from phase 1 and add additional mechanics on top of it.",
+			"KeyMechanics": [
+				{
+					"Name": "Heroes's Sundering",
+					"Description": "Cleave tankbuster.",
+					"Type": 0
+				},
+				{
+					"Name": "Radiant Halo",
+					"Description": "Unavoidable raid wide damage.",
+					"Type": 4
+				},
+				{
+					"Name": "Crystallize",
+					"Description": "Casts either AoE puddles below every player or a stack marker after a certain delay, usually shortly after Dawn Mantle is cast.",
+					"Type": 2
+				},
+				{
+					"Name": "Parhelion",
+					"Description": "Fires 3 sets of line AoEs towards each third of the arena.",
+					"Type": 2
+				},
+				{
+					"Name": "Subparhelion",
+					"Description": "The chakrams from Parhelion will fly back to the opposite side of the arena in the order they were cast, covering the entire platform, so movement is mandatory.",
+					"Type": 2
+				},
+				{
+					"Name": "Parhelic Circle",
+					"Description": "Yellow lines on the ground will form a snowflake shape. At the end of this cast light orbs are summoned and moved to the ends of the yellow lines, subsequently exploding in circle AoEs.",
+					"Type": 2
+				},
+				{
+					"Name": "Lightwave",
+					"Description": "Four large waves of light spawn at the edge of the arena, slowly moving over the platform. Typically has one quarter of the arena as safe zone.",
+					"Type": 2
+				},
+				{
+					"Name": "Echoes",
+					"Description": "Multi-hit stack marker. Cast during Lightwave.",
+					"Type": 3
+				}
+			]
+		}
+	]	
 }
