--- a/src/Resources/Localization/Duty/en/Endwalker/Dungeons/KtisisHyperboreia.json
+++ b/src/Resources/Localization/Duty/en/Endwalker/Dungeons/KtisisHyperboreia.json
@@ -4,5 +4,127 @@
     "Difficulty": 0,
     "Type": 0,
     "Expansion": 4,
-    "Level": 87
+    "Level": 87,
+    "UnlockQuestID": 69973,
+    "TerritoryID": 974,
+    "Bosses": [
+        {
+            "Name": "Lyssa",
+            "Strategy": "",
+            "KeyMechanics": [
+                {
+                    "Name": "Frigid Stomp",
+                    "Description": "Unavoidable raid wide damage.",
+                    "Type": 4
+                },
+                {
+                    "Name": "Skull Dasher",
+                    "Description": "Tankbuster.",
+                    "Type": 0
+                },
+                {
+                    "Name": "Frostbite and Seek",
+                    "Description": "Boss casts a snowstorm and becomes invisible. Safe zone is behind the boss. His position can be determined by the crater without any tracks leading away.",
+                    "Type": 2
+                },
+                {
+                    "Name": "Icicall",
+                    "Description": "Icicles spawn around the arena casting a circle AoE around them, followed by line AoEs either alon the edges or through the middle of the arena.",
+                    "Type": 2
+                },
+                {
+                    "Name": "Heavy Smash",
+                    "Description": "Parts stack.",
+                    "Type": 3
+                }
+            ]
+        },
+        {
+            "Name": "Ladon Lord",
+            "Strategy": "",
+            "KeyMechanics": [
+                {
+                    "Name": "Scratch",
+                    "Description": "Tankbuster.",
+                    "Type": 0
+                },
+                {
+                    "Name": "Intimidation",
+                    "Description": "Unavoidable raid wide damage.",
+                    "Type": 4
+                },
+                {
+                    "Name": "Pyric Blast",
+                    "Description": "Parts stack.",
+                    "Type": 3
+                },
+                {
+                    "Name": "Inhale",
+                    "Description": "Boss inhales Aether, preparing for one or two of his heads to use Pyric Breath.",
+                    "Type": 10
+                },
+                {
+                    "Name": "Pyric Breath",
+                    "Description": "Boss leaps to the middle and his swollen heads will fire wide cone shaped AoEs.",
+                    "Type": 2
+                },
+                {
+                    "Name": "Pyric Spheres",
+                    "Description": "Four Pyric Spheres spawn that will cast cross shaped AoEs across the arena.",
+                    "Type": 2
+                }
+            ]
+        },
+        {
+            "Name": "Hermes",
+            "Strategy": "",
+            "KeyMechanics": [
+                {
+                    "Name": "Trismegistos",
+                    "Description": "Unavoidable raid wide damage.",
+                    "Type": 4
+                },
+                {
+                    "Name": "Double",
+                    "Description": "Augments the next spell.",
+                    "Type": 10
+                },
+                {
+                    "Name": "Quadruple",
+                    "Description": "Augments the next two spell.",
+                    "Type": 10
+                },
+                {
+                    "Name": "True Tornado",
+                    "Description": "Tankbuster. Also casts a circle AoE below the target if empowered by Double or Quadruple.",
+                    "Type": 0
+                },
+                {
+                    "Name": "True Bravery",
+                    "Description": "Boss receives a damage up buff. Cast can be interrupted.",
+                    "Type": 10
+                },
+                {
+                    "Name": "True Aero",
+                    "Description": "Targeted line AoEs at every player. Also casts an avoidable line AoE at the position of each player if empowered by Double or Quadruple.",
+                    "Type": 2
+                },
+                {
+                    "Name": "True Aero II",
+                    "Description": "Targeted line AoEs at every player. Also casts an avoidable line AoE at the position of each player if empowered by Double or Quadruple.",
+                    "Type": 6
+                },
+                {
+                    "Name": "Meteor",
+                    "Description": "4 proximity AoEs at the edges of the arena that leave a meteor behind that can block line of sight attacks.",
+                    "Type": 2
+                },
+                {
+                    "Name": "Hermetica",
+                    "Description": "Large green panels at the edge of the arena fire line AoEs that knock players back.\nThree sets of panels: \nSimply stand in the middle to avoid.\nTwo panels on two sides: \nDon't stand in the middle to avoid.\nEmpowered by Double: \nNeeds line of sight towards the panels to be broken with the Meteors. Cracked meteors break after one hit, uncracked meteors can take both hits.\nEmpowered by Quadruple:\nTwo panels spawn on each side in circular order. Move around the arena to avoid the line AoEs.",
+                    "Type": 2
+                }
+            ]
+        }
+    ]
 }
