--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/AmdaporKeep.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/AmdaporKeep.json
@@ -29,7 +29,7 @@
                 },
                 {
                     "Name": "Mind Melt",
-                    "Description": "Raid wide that deals moderate damage to the party",
+                    "Description": "Raidwide that deals moderate damage",
                     "Type": 4
                 }
             ]
@@ -45,12 +45,12 @@
                 },
                 {
                     "Name": "Repel",
-                    "Description": "After the Demon Wall finishes casting repel all players will be knocked back away from the boss. Players must position themselves so they arent knocked back off the platform",
+                    "Description": "After the Demon Wall finishes casting repel all players will be knocked back away from the boss.",
                     "Type": 10
                 },
                 {
                     "Name": "Liquefy",
-                    "Description": "liquefy is a line AOE that can come from the two sides of the platform or the middle. It deals high damage and will inflict the Heavy debuff if youre hit by the middle AOE and the Slow debuff if youre hit by the side AOE",
+                    "Description": "Line AOE that can come from the two sides of the platform or the middle. It deals high damage and will inflict the Heavy debuff if hit by the middle AOE & the Slow debuff if hit by the side AOE",
                     "Type": 2
                 }
             ]
@@ -61,12 +61,12 @@
             "KeyMechanics": [
                 {
                     "Name": "Tail Drive",
-                    "Description": "Tail Drive is a rear cone AOE that will deal high damage and inflict the Concussion debuff causing damage over time to anyone hit",
+                    "Description": "Rear cone AOE that will deal high damage and inflict the Concussion debuff causing damage over time to anyone hit",
                     "Type": 2
                 },
                 {
                     "Name": "Rotten Breath",
-                    "Description": "Rotten Breath is a frontal cone AOE that deals high damage and will inflict the Disease debuff to anyone hit",
+                    "Description": "Frontal cone AOE that deals high damage and will inflict the Disease debuff to anyone hit",
                     "Type": 2
                 },
                 {
@@ -76,7 +76,7 @@
                 },
                 {
                     "Name": "Plague Dance",
-                    "Description": "The boss will use a purple beam on a random player after aa while a red orb will appear at the location of the player hit and deal damage to anyone around it",
+                    "Description": "Purple beam on a random player after aa while a red orb will appear at the location of the player hit and deal damage to anyone around it",
                     "Type": 6
                 }
             ]
