--- a/src/Resources/Localization/Duty/en/Endwalker/Dungeons/KtisisHyperboreia.json
+++ b/src/Resources/Localization/Duty/en/Endwalker/Dungeons/KtisisHyperboreia.json
@@ -13,7 +13,7 @@
             "KeyMechanics": [
                 {
                     "Name": "Frigid Stomp",
-                    "Description": "Unavoidable raid wide damage.",
+                    "Description": "Unavoidable raidwide damage.",
                     "Type": 4
                 },
                 {
@@ -48,7 +48,7 @@
                 },
                 {
                     "Name": "Intimidation",
-                    "Description": "Unavoidable raid wide damage.",
+                    "Description": "Unavoidable raidwide damage.",
                     "Type": 4
                 },
                 {
@@ -58,7 +58,7 @@
                 },
                 {
                     "Name": "Inhale",
-                    "Description": "Boss inhales Aether, preparing for one or two of his heads to use Pyric Breath.",
+                    "Description": "Inhales aether, preparing for one or two of his heads to use Pyric Breath.",
                     "Type": 10
                 },
                 {
@@ -78,7 +78,7 @@
             "KeyMechanics": [
                 {
                     "Name": "Trismegistos",
-                    "Description": "Unavoidable raid wide damage.",
+                    "Description": "Unavoidable raidwide damage.",
                     "Type": 4
                 },
                 {
@@ -88,7 +88,7 @@
                 },
                 {
                     "Name": "Quadruple",
-                    "Description": "Augments the next two spell.",
+                    "Description": "Augments the next two spells.",
                     "Type": 10
                 },
                 {
